# camel-up-bevy

./: .gitignore  Cargo.toml  IMPLEMENTATION_STATUS.md  dev.ps1  splash-preview.html
.cargo/: config.toml
.github/workflows/: release.yml
src/: main.rs
src/components/: betting.rs  board.rs  camel.rs  dice.rs  mod.rs  player.rs
src/game/: ai.rs  mod.rs  rules.rs  scoring.rs  state.rs
src/network/: js_bindings.rs  messages.rs  mod.rs  room.rs  state.rs  sync.rs
src/systems/: animation.rs  input.rs  leg.rs  mod.rs  movement.rs  render.rs  setup.rs  turn.rs
src/ui/: betting_panel.rs  characters.rs  hud.rs  lobby.rs  main_menu.rs  mod.rs  player_setup.rs  pyramid.rs  race_betting.rs  rules.rs  scoring.rs  theme.rs
src/ui/hud/: camel_display.rs  cards.rs  state.rs
web/: camel-up.d.ts  camel-up.js  camel-up_bg.wasm.d.ts  firebase_bridge.js  index.html  manifest.json  sw.js
