[package]
name = "camel-up"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.17"
bevy_egui = "0.38"
rand = "0.8"
image = "0.25"

# Native-only dependencies (window icon support)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
winit = "0.30"

# WASM dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

# Enable optimizations for dependencies in dev builds for better performance
[profile.dev.package."*"]
opt-level = 3

# Optimize WASM release builds
[profile.release]
lto = true
opt-level = "z"
