[package]
name = "camel-up"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.17", features = ["hotpatching"] }
bevy_egui = "0.38"
rand = "0.8"
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Native-only dependencies (window icon support)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
winit = "0.30"

# WASM dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = ["Window", "console"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo-timers = "0.3"

# Enable optimizations for dependencies in dev builds for better performance
[profile.dev.package."*"]
opt-level = 3

# Optimize WASM release builds
[profile.release]
lto = true
opt-level = "z"
